# bitcoin

./: $(BUILDER_KEYS_URL)  .appveyor.yml  .cirrus.yml  .clang-format  .cproject  .dir-locals.el  .dockerignore  .edicomfigSG  .editorconfig  .fuzzbuzz.yml  .gitattributes  .gitignore  .gitlab-cd.yml  .gitlab-ci.yml  .gitmodules  .markdownlint.yml  .mergify.yml  .project  .pydevproject  .python-version  .style.yapf  .travis.yml  .uncrustify.cfg  .vercelignore  0f3cff4.css  1.592829.1678879542914.v3.exo  123  2.9.0.45.7.03.  42-qt.pro  48764  6296163.css  7108720.css  AA68 N84G RFAS EBJQ  AAD2B108FB0A3C94C8AE000C1ED2FAF9943B0D9A.rev  AGENTS.md  ATTESTATION_VERIFICATION.md  AUTHORS  AUTOMATED_VALIDATORS_IMPLEMENTATION.md  About two-factor authentication - GitHub Docs  AddressBookDialog.cpp  (+580 more)
cryptopp/: CMakeLists.txt  License.txt  Readme.txt  config.h  cpu.cpp  cpu.h  cryptlib.h  iterhash.h  misc.h  pch.h  secblock.h  sha.cpp  sha.h  smartptr.h  stdcpp.h
db-4.8.30/mod_db4/: ABOUT  BSD  INSTALL  Makefile.in  config.h.in  configure  configure.in  mm_hash.c  mm_hash.h  mod_db4.c  mod_db4_export.h  sem_utils.c  sem_utils.h  skiplist.c  skiplist.h  utils.c  utils.h
doc/: #WİNDOWS11  .gitignore  AI_POLICY.md  BTC-header-backend.md  Build_private_network.md  CMakeLists.txt  Crown-MNPoS.md  Crown-masternode-Proof-of-Stake-consensus-overview.md  Doxyfile  Doxyfile.in  EncryptMsgAPI.txt  EncryptRPC.txt  How-to-add-fixed-seeds.md  How-to-run-RPC Explorer.md  How_to_run_bitcoin_ecc_rpc_explorer.md  INSTALL_linux.md  JSON-RPC-interface.md  Makefile  Makefile.am  MalleableKeys.txt  MalleableKeysCryptedR.txt  MalleableKeysRawTx.txt  README  README.md  README_ScryptMiner.txt  README_doxygen.md  README_escrow.txt  README_macos.md  README_osx.md  README_osx.txt  README_release.md  README_unix.md  README_windows.md  README_windows.txt  REST-interface.md  Tor.txt  alt-networking.md  analysis.md  apidocumentation.md  asmap-data.md  (+684 more)
doc/adr/: 0001-record-architecture-decisions.md
doc/bitcoin_ecc_doc/: Build_private_network.md  Desktop_wallet.md  How-to-add-fixed-seeds_Eng.md  How_to_run_bitcoin_ecc_rpc_explorer.md
doc/bitcoinkernel/: examples.md
doc/design/: assumeutxo.md  libraries.md  multiprocess.md  stdio_bus_integration.md  zkp-peer-auth.md
doc/developer/: Doxyfile.in  README_doxygen.md  developer-notes.md  fuzzing.md  release-process.md
doc/examples/: network.conf  staking.conf
doc/homebrew/: bitcoind.rb
doc/litecoin-release-notes/: release-notes-0.10.2.2.md  release-notes-0.10.4.md  release-notes-0.13.2.md  release-notes-0.13.3.md  release-notes-0.14.2.md  release-notes-0.15.0.1.md  release-notes-0.16.2.md  release-notes-0.16.3.md  release-notes-0.17.1.md  release-notes-0.21.1.md  release-notes-0.21.2.1.md  release-notes-0.21.2.2.md  release-notes-0.21.2.md  release-notes-0.21.3.md
doc/man/: Makefile  Makefile.am  Makefile.in  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoin-wallet.1  bitcoin.1  bitcoind.1  bitcointalkcoin-cli.1  bitcointalkcoin-qt.1  bitcointalkcoin-tx.1  bitcointalkcoin-wallet.1  bitcointalkcoind.1  bitgreen-cli.1  bitgreen-qt.1  bitgreen-wallet.1  bitgreend.1  blockcash-cli.1  blockcash-qt.1  blockcash-t.1  blockcashd.1  britanniacoin-cli.1  britanniacoin-qt.1  britanniacoin-tx.1  britanniacoin-util.1  britanniacoin-wallet.1  britanniacoind.1  btchd-cli.1  btchd-qt.1  btchd-tx.1  btchd-wallet.1  btchdd.1  chaincoin-cli.1  chaincoin-qt.1  chaincoin-tx.1  chaincoind.1  dash-cli.1  dash-qt.1  (+79 more)
doc/mweb/: light-clients.md  mining-changes.md  pmmr.md  stealth-addresses.md  store.md
doc/omnicore/: configuration.md  release-notes.md  rpc-api.md
doc/policy/: .mempool-limits.md  README.md  feerates-and-vsize.md  mempool-design.md  mempool-limits.md  mempool-replacements.md  mempool-terminology.md  packages.md  rbf.md  standardness.md  version3_transactions.md
doc/pr/: rpc-p2p-backpressure-issue.md  rpc-p2p-backpressure.md
doc/release-notes/: 28824.md  release-notes-0.10.0.md  release-notes-0.10.1.md  release-notes-0.10.2.md  release-notes-0.10.3.md  release-notes-0.10.4.md  release-notes-0.11.0.md  release-notes-0.11.1.md  release-notes-0.11.2.md  release-notes-0.12.0.md  release-notes-0.12.1.md  release-notes-0.13.0.md  release-notes-0.13.1.md  release-notes-0.13.2.md  release-notes-0.14.0.md  release-notes-0.14.1.md  release-notes-0.14.2.md  release-notes-0.14.3.md  release-notes-0.15.0.1.md  release-notes-0.15.0.2.md  release-notes-0.15.0.md  release-notes-0.15.1.2.md  release-notes-0.15.1.md  release-notes-0.15.2.md  release-notes-0.16.0.1.md  release-notes-0.16.0.md  release-notes-0.16.1.md  release-notes-0.16.2.md  release-notes-0.16.3.md  release-notes-0.17.0.1.md  release-notes-0.17.0.md  release-notes-0.17.1.md  release-notes-0.18.0.md  release-notes-0.18.1.md  release-notes-0.19.0.1.md  release-notes-0.19.0.md  release-notes-0.19.1.md  release-notes-0.20.0.md  release-notes-0.20.1.md  release-notes-0.20.2.md  (+125 more)
doc/speedup-batch/: Makefile  bench.sh  bench_output.txt
doc/whitepaper/: whitepaper.md
doc/widecoin-release-notes/: release-notes-1.0.0.md  release-notes-2.0.0.md  release-notes-3.0.0.md
example/: CMakeLists.txt  calculator.cpp  calculator.h  init.capnp  init.h  printer.h  types.h
example/table/: intro.cpp
example/vector/: vector.cpp  (+1 more)
js-bindings/: CMakeLists.txt  README.md  helpers.cpp
src/: .bear-tidy-config  .clang-format  .clang-tidy  .formatted-files  .gitignore  AdminProtocol.h  AdminRPCBinding.cpp  AdminRPCBinding.h  AdminServer.cpp  AdminServer.h  Application.cpp  Application.h  BitcoinAddress.cpp  BitcoinAddress.h  BitcoinExtKeyBase.cpp  BitcoinExtKeyBase.h  BitcoinSecret.cpp  BitcoinSecret.h  CMakeLists.txt  ChainParamsUtil.cpp  ChainParamsUtil.h  ExtKey.cpp  ExtKey.h  ExtPubKey.cpp  ExtPubKey.h  Makefile  Makefile.am  Makefile.bench.include  Makefile.chiabls.include  Makefile.common  Makefile.crc32c.include  Makefile.daemon.include  Makefile.in  Makefile.include  Makefile.leveldb.include  Makefile.minisketch.include  Makefile.new.am  Makefile.omnicore.include  Makefile.omnitest.include  Makefile.qt.include  (+1236 more)
(+40123 files in other folders)
